css/style.css
/*Fonts Family*/
/*Colors*/
/*Basic settings*/
html {
  /* overflow-x: hidden; */
  font-size: 10px;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #000000;
}

.status {
  display: block;
  color: red;
}

a:hover {
  text-decoration: none;
}

a:focus,
button:focus,
input:focus,
textarea:focus {
  outline: none;
}

.no-padding {
  padding: 0 !important;
}

.form {
  /*margin-top: 2rem;*/
  padding: 2rem 5rem;
  text-align: center;
  border-radius: 1rem;
  background-color: #ffffff;
}

.form h2 {
  margin-bottom: 3rem;
  font-size: 2rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #333333;
  line-height: 1.5;
}

.form h2 span {
  font-size: 2.4rem;
  text-transform: uppercase;
}

.form_input {
  height: 5.8rem;
  padding: 0;
  margin-bottom: 2rem;
  text-align: center;
  border-radius: 1rem;
  -moz-box-sizing: border-box;
}

.form_input::-webkit-input-placeholder {
  color: #999;
  opacity: 1;
  font-size: 1.5rem;
}

.form_input::-moz-placeholder {
  color: #999;
  opacity: 1;
  font-size: 1.5rem;
}

.form_input:-moz-placeholder {
  color: #999;
  opacity: 1;
  font-size: 1.5rem;
}

.form_input:-ms-input-placeholder {
  color: #999;
  opacity: 1;
  font-size: 1.5rem;
}

.form_input:focus::-webkit-input-placeholder {
  color: transparent;
}

.form_input:focus::-moz-placeholder {
  color: transparent;
}

.form_input:focus:-moz-placeholder {
  color: transparent;
}

.form_input:focus:-ms-input-placeholder {
  color: transparent;
}

.form_notice {
  margin-top: 1rem;
  margin-bottom: 2rem;
  font-size: 1.1rem;
  color: #666;
}

.button {
  padding: 2.5rem 0rem;
  font-size: 1.7rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  border: 1px solid #ffc600;
  border-radius: 1rem;
  background: -webkit-gradient(linear, left top, left bottom, from(#ffed26), to(#ffb400));
  background: linear-gradient(180deg, #ffed26 0%, #ffb400 100%);
  -webkit-box-shadow: 1px 2px 20px 0px rgba(255, 153, 0, 0.4);
  box-shadow: 1px 2px 20px 0px rgba(255, 153, 0, 0.4);
}

.button:hover {
  cursor: pointer;
}

.section_header {
  margin-bottom: 8rem;
  text-align: center;
  text-transform: uppercase;
}

.section_header h2 {
  font-size: 3rem;
  line-height: 1.4;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #333333;
}

.section_header_sub {
  margin-top: 2rem;
  margin-left: 50%;
  -webkit-transform: translateX(-50%);
  transform: translateX(-50%);
  width: 17rem;
  height: 0.2rem;
  background: url(../img/glazing/line.png) 0 0 no-repeat;
}

.arrow {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  z-index: 99;
  width: 2rem;
  height: 2rem;
  border: none;
}

.prev {
  left: 0;
  background: url(../img/glazing/left_arrow.png) center no-repeat;
  background-size: 70%;
}

.next {
  right: 0;
  background: url(../img/glazing/right_arrow.png) center no-repeat;
  background-size: 70%;
}

/*Header*/
.header {
  height: 10rem;
  background-color: #ffffff;
  /*border: 1px solid red;*/
}

.header .logo {
  height: 10rem;
  display: table;
}

.header .logo_img {
  display: table-cell;
  vertical-align: middle;
}

.header .logo_img img {
  margin-right: 2rem;
}

.header .logo p {
  display: table-cell;
  vertical-align: middle;
  line-height: 1.2;
  font-size: 1.4rem;
  color: #0089cd;
}

.header_btn {
  background: #ffffff url(../img/header/edit.png) 1rem center no-repeat;
  padding: 1rem 1rem 1rem 5rem;
  border: 2px solid #55a831;
  border-radius: 1rem;
  background-color: #ffffff;
  font-size: 1.4rem;
  line-height: 1.2;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #55a831;
  /*p {
				display: inline-block;
			vertical-align: top;
				font-size: 1.4rem;
				line-height: 1.2;
				.bold();
				color: @green;
			}*/
}

.header_btn_wrap {
  display: table;
  width: 100%;
  height: 10rem;
}

.header_btn_wrap_block {
  display: table-cell;
  vertical-align: middle;
}

.header_btn_wrap_block img {
  margin-right: 0.7rem;
}

.header_btn:hover {
  cursor: pointer;
}

.header .working_hours {
  height: 10rem;
  display: table;
  /*text-align: right;*/
}

.header .working_hours_img {
  display: table-cell;
  vertical-align: middle;
}

.header .working_hours_img img {
  margin-right: 2rem;
}

.header .working_hours p {
  display: table-cell;
  vertical-align: middle;
  font-size: 1.4rem;
  color: #333333;
}

.header .working_hours p span {
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1.8rem;
}

.header .contact_us {
  height: 10rem;
  display: table;
  text-align: right;
}

.header .contact_us_wrap {
  display: table-cell;
  vertical-align: middle;
  line-height: 1.7;
}

.header .contact_us_wrap a {
  display: block;
  font-size: 2.3rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #333333;
  /*border: 1px solid blue;*/
}

.header .contact_us_wrap a img {
  margin-right: 1rem;
}

.header .contact_us_wrap .phone_link {
  font-size: 1.5rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #0089cd;
  text-decoration: underline;
}

/*Main*/
.main {
  padding: 10rem 0;
  background: #ffffff url(../img/main/bg.png) 0 0 no-repeat;
}

.main h1 {
  margin: 0;
  /*margin-top: -4rem;*/
  font-size: 5.5rem;
  line-height: 1.5;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #333333;
}

.main h1 span {
  font-size: 2.6rem;
}

.main_features {
  padding: 0;
  margin-top: 13rem;
}

.main_features_block {
  text-align: center;
}

.main_features_block .small_img {
  margin-top: 1rem;
}
/* ... */

